# PlantVillage-DeepLearning

./: .gitignore  LICENSE  README.md  hyperparameter_tuning.py  inference.py  main.py  pyproject.toml
config/: config.yaml
dataloader/: data_loader.py
executors/: train.py
model/: model.py
utils/: plot.py
